# cos

./: .gitignore  implementation.md  phase_log.md  pyproject.toml  test_all.py
cos/: __init__.py  __main__.py
cos/api/: __init__.py  main.py
cos/autonomy/: __init__.py  autonomous.py
cos/core/: __init__.py  batch.py  cache.py  cli_registry.py  config.py  cost.py  errors.py  events.py  health.py  ingestion.py  investigations.py  logging.py  pipelines.py  plugins.py  ratelimit.py  storage.py  tagging.py  tasks.py  validation.py  versioning.py
cos/decision/: __init__.py  actions.py  benchmark.py  missing_evidence.py  risk.py  schema.py  tracking.py  tradeoffs.py
cos/intelligence/: __init__.py  agents.py  meta.py  simulation.py
cos/interface/: __init__.py  chat.py  dashboard.py  graph_ui.py  investigation_ui.py  llm_chat.py
cos/memory/: __init__.py  chemistry.py  conflicts.py  connectors.py  crossdomain.py  documents.py  embeddings.py  entities.py  episodic.py  gaps.py  graph.py  hybrid_query.py  incremental.py  procedural.py  provenance.py  pruning.py  relations.py  scoring.py  semantic.py  snapshots.py  temporal.py  visualization.py
cos/reasoning/: __init__.py  benchmark.py  causal.py  comparison.py  compression.py  contradictions.py  cost_optimizer.py  disconfirmation.py  domain_adapters.py  evidence.py  explainability.py  hypothesis.py  insights.py  multipass.py  patterns.py  ranking.py  refinement.py  scenarios.py  synthesis.py  (+2 more)
data/: kras_compounds.csv
docs/: COS_ARCHITECT_CONTEXT.md  PRODUCT_ROADMAP.md  ROADMAP_COS.md  ROADMAP_COS_ARCHITECT_NOTES.md
(+257 files in other folders)
